--- a/project_1/style.css
+++ b/project_1/style.css
@@ -36,6 +36,7 @@ body {
 .game-title {
     text-align: center;
     padding: 10px;
+    margin: 0;
     background-color: black;
     color: gold;
     border-bottom: 4px solid gold;
