--- a/project_2/style.css
+++ b/project_2/style.css
@@ -7,17 +7,22 @@ body {
     padding: 0;
 }
 
-#game-table {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+h2,p  {
+    margin: 0;
+    padding: 10px;
 }
 
 #game-result {
     background-color: black;
     color: gold;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
+}
+
+#game-table {
+    text-align: center;
+    background-color: green;
+    padding: 0;
 }
 
 .card {
@@ -44,4 +49,8 @@ body {
     margin: auto;
     margin-bottom: 20px;
     display: none;
+}
+
+.result {
+    text-align: center;
 }
