--- a/project_2/style.css
+++ b/project_2/style.css
@@ -51,6 +51,15 @@ h2,p  {
     display: none;
 }
 
+.player-buttons {
+    padding-bottom: 10px;
+}
+
+.npc-card-section, .player-card-section {
+    display: flex;
+    justify-content: center;
+}
+
 .result {
     text-align: center;
 }
