--- a/project_4/style.css
+++ b/project_4/style.css
@@ -10,6 +10,7 @@ body {
 #game-area {
     position: relative;
     background-color: black;
+    color: white;
     margin: auto;
     height: 600px;
     width: 1000px;
