Bugfix where ace didn't work as expected -02

--- a/project_2/style.css
+++ b/project_2/style.css
@@ -58,6 +58,7 @@ h2,p  {
 .npc-card-section, .player-card-section {
     display: flex;
     justify-content: center;
+    height: 200px;
 }
 
 .result {
