--- a/project_2/style.css
+++ b/project_2/style.css
@@ -14,7 +14,7 @@ h2,p  {
 
 #game-result {
     background-color: black;
-    color: gold;
+    color: red;
     display: flex;
     justify-content: space-around;
 }
@@ -33,10 +33,10 @@ h2,p  {
     height: 160px;
     width: 90px;
     margin: 15px;
-    border: 4px solid gold;
+    border: 4px solid red;
     border-radius: 10px;
     background-color: whitesmoke;
-    color: gold;
+    color: black;
     text-align: center;
 }
 
@@ -45,8 +45,8 @@ h2,p  {
     padding: 10px;
     margin: 0;
     background-color: black;
-    color: gold;
-    border-bottom: 4px solid gold;
+    color: red;
+    border-bottom: 4px solid red;
 }
 
 .play-again {
